# weaviate_importer_poc

./: .gitattributes  .gitignore  LICENSE  README.md  add_data_test.ipynb  app.py  delete_all.py  docker-compose.yml  pyproject.toml  query.ipynb  test.ipynb  utils.py
data/: .gitignore
