[tool.poetry]
name = "weaviate-import-demo"
version = "0.1.0"
description = "A proof of concept app for easy data population to a Weaviate instance"
authors = ["JP Hwang <me@jphwang.com>"]
readme = "README.md"
packages = [{include = "weaviate_import_demo"}]

[tool.poetry.dependencies]
python = "~3.8"
streamlit = "^1.14.0"
pandas = "^1.5.1"
weaviate-client = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
